--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,10 +23,9 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
 ]
 dependencies = [
-    "fastmcp>=0.1.0",
+    "mcp>=1.0.0",
     "requests>=2.31.0",
-    "python-dotenv>=1.0.0",
-    "litellm>=1.0.0",
+    "litellm>=1.55.1",
 ]
 
 [project.optional-dependencies]
